- actually getting small desktop float fix into desktop.css - join us modal button height alignment

--- a/wp-content/themes/nationswell/scss/partials/desktop/_modal.scss
+++ b/wp-content/themes/nationswell/scss/partials/desktop/_modal.scss
@@ -58,6 +58,8 @@
     .btn--bar {
       display: inline-block;
       margin-right: 3.3334%;
+      height: 5.4rem;
+      vertical-align: middle;
 
       &:last-child {
         margin-right: 0;
